--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -15,24 +15,47 @@
 
 <!-- Contenido -->
 <ion-content class="ion-padding">
-  <h1>Ingresar</h1>
 
-  <ion-item>
-    <ion-label position="floating">Ingrese su correo</ion-label>
-    <ion-input [(ngModel)]="email" type="email" placeholder="email@domain.com"></ion-input>
-  </ion-item>
+  <div>
+    <h1>Ingresar</h1>
 
-  <ion-item>
-    <ion-label position="floating">Ingrese su contraseña</ion-label>
-    <ion-input [(ngModel)]="passWord" type="password" placeholder="******"></ion-input>
-  </ion-item>
+      <ion-item>
+        <ion-label position="floating">Ingrese su correo</ion-label>
+        <ion-input [(ngModel)]="email" type="email" placeholder="email@domain.com"></ion-input>
+      </ion-item>
 
-  <ion-button expand="full" (click)="login()">Ingresar</ion-button>
+      <ion-item>
+        <ion-label position="floating">Ingrese su contraseña</ion-label>
+        <ion-input [(ngModel)]="passWord" type="password" placeholder="******"></ion-input>
+      </ion-item>
+      <div class="ion-text-center">
+        <ion-button  (click)="login()">Ingresar</ion-button>
+      </div>
+      
+  </div>
+  
+  
+  <div>
+    <ion-grid>
+      <ion-row>
+        <ion-col class="Registrar ion-text-center ion-align-items-center">
+          <div>
+            <a [routerLink]="['/crear-user']">Registrar</a>
+          </div> 
+        </ion-col>
+        <ion-col class="Recuperar ion-text-center ion-align-items-center">
+          <div>
+            <a [routerLink]="['/recuperar-pass']">Recuperar</a>
+          </div>
+        </ion-col>       
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
 
 <!-- Pie de página -->
 <ion-footer>
   <ion-toolbar>
-    <ion-title>Sacate al toke las zapatilla</ion-title>
+    <ion-title>Jon.Roa</ion-title>
   </ion-toolbar>
 </ion-footer>
