--- a/src/app/page/recuperar-pass/recuperar-pass.page.html
+++ b/src/app/page/recuperar-pass/recuperar-pass.page.html
@@ -19,11 +19,13 @@
   <h1>Recuperar Contraseña</h1>
 
   <ion-item>
-    <ion-input label="Ingrese su correo" type="email" placeholder="email@domain.com"></ion-input>
+    <ion-label position="floating">Ingrese su correo</ion-label>
+    <ion-input [(ngModel)]="email" type="email" placeholder="email@domain.com"></ion-input>
   </ion-item>
   
- 
-    <ion-button exportparts="block">Enviar correo</ion-button>
+  <div class="ion-text-center">
+    <ion-button (click)="Recuperar()">Enviar correo</ion-button>
+  </div>
   
 </ion-content>
 
@@ -33,6 +35,6 @@
 <!-- Pie de página -->
 <ion-footer>
   <ion-toolbar>
-    <ion-title>Sacate al toke las zapatillas</ion-title>
+    <ion-title>Jon.Roa</ion-title>
   </ion-toolbar>
 </ion-footer>
