--- a/src/app/page/principal/principal.page.html
+++ b/src/app/page/principal/principal.page.html
@@ -31,6 +31,6 @@
 <!-- Pie de página -->
 <ion-footer>
   <ion-toolbar>
-    <ion-title>Sacate al toke las zapatillas</ion-title>
+    <ion-title>Jon.Roa</ion-title>
   </ion-toolbar>
 </ion-footer>
