--- a/src/app/page/principal/principal.page.html
+++ b/src/app/page/principal/principal.page.html
@@ -18,14 +18,26 @@
 <ion-content class="ion-padding">
   <h1>
 
-    <div>PAGINA PRINCIPAL</div>
+    <div>
+      <p>PAGINA PRINCIPAL</p>
+    </div>
   </h1>
+<div>
+  <p>
+    Bienvenido:{{email}}
+  </p>
 
+
+</div>
  
   
 </ion-content>
 
+<div>
 
+  <ion-button  (click)="logOut()">Cerrar sesión</ion-button>
+
+</div>
 
 
 <!-- Pie de página -->
