--- a/src/app/page/recuperar-pass/recuperar-pass.page.html
+++ b/src/app/page/recuperar-pass/recuperar-pass.page.html
@@ -1,9 +1,16 @@
 <!-- Encabezado -->
 <ion-header>
   <ion-toolbar>
-    <img src="/assets/img/duoc.png" class="responsive-image" />
+    <div>
+      <ion-button slot="start"> 
+        <ion-back-button defaultHreferef="/"></ion-back-button>
+      </ion-button>
+
+      <img src="/assets/img/duoc.png" class="responsive-image" />
+    </div>
   </ion-toolbar>
 </ion-header>
+
 
 <style>
   .responsive-image {
