--- a/src/app/page/crear-user/crear-user.page.html
+++ b/src/app/page/crear-user/crear-user.page.html
@@ -1,13 +1,35 @@
+<!-- Menú lateral -->
+<ion-menu content-id="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>TeLlevoApp</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-list>
+      <ion-item routerLink="/login">INICIAR SESION</ion-item>
+      <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
+      <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <!-- Encabezado -->
 <ion-header>
   <ion-toolbar>
-    <div>
-      <ion-button slot="start"> 
-        <ion-back-button defaultHreferef="/"></ion-back-button>
-      </ion-button>
+    <!-- Botón para regresar en el lado izquierdo -->
+    <ion-button slot="start"> 
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-button>
 
-      <img src="/assets/img/duoc.png" class="responsive-image" />
-    </div>
+    <!-- Logo de la aplicación -->
+    <img src="/assets/img/duoc.png" class="responsive-image" />
+
+    <!-- Botón para abrir el menú lateral en el lado derecho -->
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button> <!-- Botón del menú -->
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -19,10 +41,9 @@
   }
 </style>
 
-
 <!-- Contenido -->
-<ion-content class="ion-padding">
-  <h1>Registro</h1>
+<ion-content id="main-content" class="ion-padding">
+  <h1>Crear cuenta</h1>
 
   <ion-item>
     <ion-label position="floating">Ingrese su correo</ion-label>
@@ -35,11 +56,9 @@
   </ion-item>
 
   <div class="ion-text-center">
-    <ion-button  (click)="Registrar()">Registrar</ion-button>
+    <ion-button (click)="Registrar()">Registrar</ion-button>
   </div>
-  
 </ion-content>
-
 
 <!-- Pie de página -->
 <ion-footer>
