agregar-vehiculo check

--- a/src/app/page/principal/principal.page.html
+++ b/src/app/page/principal/principal.page.html
@@ -11,6 +11,8 @@
       <ion-item routerLink="/login">INICIAR SESION</ion-item>
       <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
       <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+
     </ion-list>
   </ion-content>
 </ion-menu>
