--- a/src/app/page/crear-user/crear-user.page.html
+++ b/src/app/page/crear-user/crear-user.page.html
@@ -10,8 +10,9 @@
     <ion-list>
       <ion-item routerLink="/login">INICIAR SESION</ion-item>
       <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
-      <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
-    </ion-list>
+      <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+</ion-list>
   </ion-content>
 </ion-menu>
 
