--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -10,9 +10,9 @@
       <ion-list>
         <ion-item routerLink="/login">INICIAR SESION</ion-item>
         <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
-        <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
-        <ion-item routerLink="/agregar-vehiculo">Agregar vehiculo</ion-item>
-
+        <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
+        <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+        <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
