--- a/src/app/page/recuperar-pass/recuperar-pass.page.html
+++ b/src/app/page/recuperar-pass/recuperar-pass.page.html
@@ -7,9 +7,10 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item routerLink="/login">Iniciar sesión</ion-item>
-      <ion-item routerLink="/crear-user">Crear cuenta</ion-item>
-      <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
+      <ion-item routerLink="/login">INICIAR SESION</ion-item>
+      <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
+      <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
