--- a/src/app/page/principal/principal.page.html
+++ b/src/app/page/principal/principal.page.html
@@ -13,6 +13,8 @@
       <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
       <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
       <ion-item routerLink="/agregar-viaje">viajes</ion-item>
+      <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
+
     </ion-list>
   </ion-content>
 </ion-menu>
