--- a/src/app/page/lista-vehiculos/lista-vehiculos.page.html
+++ b/src/app/page/lista-vehiculos/lista-vehiculos.page.html
@@ -10,6 +10,8 @@
       <ion-item routerLink="/login">INICIAR SESION</ion-item>
       <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
       <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+      <ion-item routerLink="/lista-vehiculos">MIS VEHICULOS</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
@@ -49,7 +51,12 @@
         <ion-row>
           <ion-col size="12" size-md="6" *ngFor="let vehiculo of vehiculos">
             <ion-card>
-              <img [src]="vehiculo.url_imagen || '/assets/img/default-car.png'" alt="Imagen del vehículo"/>
+              <img 
+                [src]="vehiculo.url_imagen || '/assets/img/default-car.png'" 
+                (error)="handleImageError($event)"
+                [alt]="vehiculo.marca + ' ' + vehiculo.modelo"
+                class="vehicle-image"
+              />
               <ion-card-header>
                 <ion-card-subtitle>{{vehiculo.marca}} {{vehiculo.modelo}}</ion-card-subtitle>
                 <ion-card-title>{{vehiculo.patente}}</ion-card-title>
@@ -116,14 +123,36 @@
     margin-bottom: 16px;
   }
 
-  ion-card img {
+  .vehicle-image {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    object-position: center;
   }
 
   h1 {
     margin-bottom: 24px;
     color: var(--ion-color-primary);
+  }
+
+  ion-card-content ion-item {
+    --padding-start: 0;
+  }
+
+  ion-fab {
+    margin-bottom: 20px;
+    margin-right: 20px;
+  }
+
+  ion-card-subtitle {
+    text-transform: uppercase;
+  }
+
+  ion-list {
+    background: transparent;
+  }
+
+  ion-item {
+    --background: transparent;
   }
 </style>
